<resources>
    <string name="app_name">Job Tracker</string>
    <string name="job_title">Job Title</string>
    <string name="company_name">Company Name</string>
    <string name="date_applied">Date Applied</string>
    <string name="save_job">Save Job</string>
    <string name="search_jobs">Search jobs...</string>
    <string name="add_new_job">Add New Job</string>
    <string name="cancel">Cancel</string>
    <string name="please_fill_in_all_fields">Please fill in all fields</string>
    <string name="add_new_job_button">Add new job button</string>
    <string name="application_method">Application Method</string>
</resources>